--- a/index.html
+++ b/index.html
@@ -606,120 +606,66 @@
                 </div>
             </div>
         </section>
-
-        <!-- Artesanato Section -->
-        <section id="artesanato">
-            <h2>🎨 Artesanato</h2>
-            <p>O trabalho manual que preserva tradições. Conheça os artesãos que transformam barro, tecido e madeira em arte.</p>
-
-            <div class="placeholder-text">
-                📸 <strong>Área para inserir conteúdo coletado:</strong> Adicione aqui as fotos e entrevistas dos artesãos locais
-            </div>
-
-            <div class="cards-grid">
-                <div class="card">
-                    <div class="card-image">🏺</div>
-                    <div class="card-content">
-                        <h3>[Nome do Artesão]</h3>
-                        <p><strong>Técnica:</strong> [Tipo de artesanato: barro/tecido/madeira]</p>
-                        <p>[Breve descrição da história, técnica utilizada e produtos criados...]</p>
-                        <p class="meta">Tradição familiar: [Gerações ou anos]</p>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-image">🧵</div>
-                    <div class="card-content">
-                        <h3>[Nome do Artesão]</h3>
-                        <p><strong>Técnica:</strong> [Tipo de artesanato: barro/tecido/madeira]</p>
-                        <p>[Breve descrição da história, técnica utilizada e produtos criados...]</p>
-                        <p class="meta">Tradição familiar: [Gerações ou anos]</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Histórias de Vida Section -->
-        <section id="historias">
+       <section id="historias">
             <h2>📖 Histórias de Vida</h2>
             <p>Trajetórias que inspiram. Conheça trabalhadores antigos da cidade e suas memórias sobre Lagarto.</p>
 
-            <div class="placeholder-text">
-                📸 <strong>Área para inserir conteúdo coletado:</strong> Adicione aqui as fotos e entrevistas completas
+            <!-- História 1 -->
+            <div style="background: white; padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); margin-bottom: 2.5rem; border-left: 5px solid #2c5f2d;">
+                <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #2c5f2d 0%, #97bc62 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2rem; flex-shrink: 0;">
+                        👤
+                    </div>
+                    <div>
+                        <h3 style="color: #2c5f2d; font-size: 1.8rem; margin: 0;">Seu Francisco das Chagas</h3>
+                        <p style="color: #666; margin: 0; font-size: 1.1rem;"><strong>Agricultor</strong> • 68 anos em Lagarto</p>
+                    </div>
+                </div>
+                
+                <div style="color: #555; font-size: 1.05rem; line-height: 1.9;">
+                    <p style="margin-bottom: 1rem;">
+                        "Comecei a trabalhar na roça muito cedo, ainda menino. Meu pai me ensinou que a terra é mãe, e se você cuida dela, ela cuida de você. Foram muitos anos de sol quente, de chuva na hora errada, de seca que matava a plantação. Mas nunca desisti."
+                    </p>
+                    <p style="margin-bottom: 1rem; background: #f9f9f9; padding: 1.5rem; border-radius: 10px; font-style: italic;">
+                        "Vi Lagarto crescer. Antes não tinha asfalto, não tinha mercado grande. Era tudo mais simples, mas a gente era feliz. As pessoas se ajudavam mais, todo mundo se conhecia pelo nome."
+                    </p>
+                    <p style="margin-bottom: 1rem;">
+                        Seu Francisco plantou milho, feijão e mandioca durante toda a vida. Criou cinco filhos do trabalho na terra e diz que não se arrepende de nada. "Ensinei meus filhos a amar a terra. Nem todos ficaram na roça, mas todos sabem de onde vieram."
+                    </p>
+                    <p style="margin-bottom: 0; font-weight: 600; color: #2c5f2d;">
+                        💬 "Hoje estou aposentado, mas ainda acordo cedo pra cuidar da minha hortinha. O corpo já não aguenta como antes, mas a vontade continua a mesma."
+                    </p>
+                </div>
             </div>
 
-            <div class="cards-grid">
-                <div class="card">
-                    <div class="card-image">👤</div>
-                    <div class="card-content">
-                        <h3>[Nome do Trabalhador]</h3>
-                        <p><strong>Profissão:</strong> [Ocupação atual ou anterior]</p>
-                        <p>[Trecho da história de vida, desafios superados, contribuição para a cidade...]</p>
-                        <p class="meta">Nascido em Lagarto há [X anos]</p>
+                <div style="background: white; padding: 2.5rem; border-radius: 15px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); margin-bottom: 2.5rem; border-left: 5px solid #1e40af;">
+                <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 1.5rem;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2rem; flex-shrink: 0;">
+                        👤
+                    </div>
+                    <div>
+                        <h3 style="color: #1e40af; font-size: 1.8rem; margin: 0;">Dona Maria Aparecida Santos</h3>
+                        <p style="color: #666; margin: 0; font-size: 1.1rem;"><strong>Costureira</strong> • 52 anos em Lagarto</p>
                     </div>
                 </div>
-
-                <div class="card">
-                    <div class="card-image">👤</div>
-                    <div class="card-content">
-                        <h3>[Nome do Trabalhador]</h3>
-                        <p><strong>Profissão:</strong> [Ocupação atual ou anterior]</p>
-                        <p>[Trecho da história de vida, desafios superados, contribuição para a cidade...]</p>
-                        <p class="meta">Nascido em Lagarto há [X anos]</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Galeria Section -->
-        <section id="galeria">
-            <h2>📷 Galeria</h2>
-            <p>Acervo visual do cotidiano lagartense. Fotografias autorais que registram o trabalho e a cultura local.</p>
-
-            <div class="placeholder-text">
-                📸 <strong>Área para inserir fotos:</strong> Mínimo de 10 fotografias autorais em alta resolução
-            </div>
-
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 1]</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 2]</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 3]</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 4]</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 5]</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <span>📷</span>
-                    <div class="gallery-caption">
-                        <p>[Legenda da foto 6]</p>
-                    </div>
+                
+                <div style="color: #555; font-size: 1.05rem; line-height: 1.9;">
+                    <p style="margin-bottom: 1rem;">
+                        "Comecei a costurar ainda menina, ajudando minha mãe a fazer roupa pra fora. Aprendi que todo trabalho feito com capricho tem valor. Fiz vestido de noiva, roupa de batizado, uniforme de escola. Cada costura conta uma história."
+                    </p>
+                    <p style="margin-bottom: 1rem; background: #eff6ff; padding: 1.5rem; border-radius: 10px; font-style: italic;">
+                        "O mais bonito é quando uma noiva vem me agradecer porque o vestido ficou perfeito. Ou quando uma mãe traz a filha pra fazer a roupa da formatura, e eu lembro que fiz a roupa da festa de 15 anos dela."
+                    </p>
+                    <p style="margin-bottom: 1rem;">
+                        Dona Maria trabalha em casa, onde mantém sua máquina de costura na sala. "Às vezes trabalho até tarde da noite pra entregar no prazo. Mas amo o que faço. É uma profissão que exige paciência e dedicação."
+                    </p>
+                    <p style="margin-bottom: 0; font-weight: 600; color: #1e40af;">
+                        💬 "Ensinei minhas duas filhas a costurar também. Hoje uma delas trabalha comigo. É bom saber que essa tradição vai continuar na família."
+                    </p>
                 </div>
             </div>
         </section>
-
         <!-- Sobre o Projeto Section -->
         <section id="sobre">
             <h2>ℹ️ Sobre o Projeto</h2>
