--- a/index.html
+++ b/index.html
@@ -1141,7 +1141,7 @@
                             </p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/foto_ufs/WhatsApp Image 2026-01-17 at 20.42.18.jpeg', 'Campus UFS Vista')">
+                            onclick="openImage('images/foto_ufs/ufs_foto1.jpeg', 'Campus UFS Vista')">
                             <img src="images/foto_ufs/ufs_foto1.jpeg" alt="Campus UFS Vista">
                             <div class="img-credit">Foto: Elisa Gabriela Pereira Nascimento | 2026</div>
                         </div>
@@ -1170,7 +1170,7 @@
                                 de casos clínicos.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/foto_ufs/WhatsApp Image 2026-01-17 at 20.42.19 (1).jpeg', 'Entrada Lateral')">
+                            onclick="openImage('images/foto_ufs/ufs_foto2.jpeg', 'Entrada Lateral')">
                             <img src="images/foto_ufs/ufs_foto2.jpeg" alt="Entrada Lateral">
                             <div class="img-credit">Foto: Elisa Gabriela Pereira Nascimento | 2026</div>
                         </div>
@@ -1434,21 +1434,7 @@
                     <p>Registro visual das instituições de ensino superior de Lagarto. Todas as fotos são autorais.</p>
                 </div>
                 <div class="galeria-grid">
-                    <div class="photo-item" onclick="openImage('images/20260111_174333.jpg', 'Monumento de Entrada')">
-                        <img src="images/20260111_174333.jpg" alt="Monumento">
-                        <div class="photo-caption">
-                            <div class="title">Monumento de Entrada</div>
-                            <div class="credit">Foto: Elisa Gabriela Pereira Nascimento | 2026</div>
-                        </div>
-                    </div>
-                    <div class="photo-item"
-                        onclick="openImage('images/20260111_173308.jpg', 'Terminal Rodoviário Coopertalse')">
-                        <img src="images/20260111_173308.jpg" alt="Terminal">
-                        <div class="photo-caption">
-                            <div class="title">Terminal Rodoviário Coopertalse</div>
-                            <div class="credit">Foto: Elisa Gabriela Pereira Nascimento | 2026</div>
-                        </div>
-                    </div>
+
                     <div class="photo-item" onclick="openImage('images/foto_ufs/entrada.jpeg', 'Entrada UFS Lagarto')">
                         <img src="images/foto_ufs/entrada.jpeg" alt="UFS">
                         <div class="photo-caption">
