--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@
                         </div>
                     </div>
                     <div class="route-card" style="padding: 0; overflow: hidden;">
-                        <iframe class="map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3911.731530967241!2d-37.65961292595639!3d-10.939186989217974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70f552536c0538d%3A0x8c38d2605032065c!2sInstituto%20Federal%20de%20Sergipe%20-%20Campus%20Lagarto!5e0!3m2!1spt-BR!2sbr!4v1708540000000!5m2!1spt-BR!2sbr" allowfullscreen=""
+                        <iframe class="map-frame" src="https://maps.google.com/maps?q=IFS+Campus+Lagarto&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen=""
                             loading="lazy"></iframe>
                     </div>
                 </div>
@@ -1748,7 +1748,7 @@
                         </div>
                     </div>
                     <div class="route-card" style="padding: 0; overflow: hidden;">
-                        <iframe class="map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3912.1402454650835!2d-37.66825482595685!3d-10.908766889245506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70f545555555555%3A0xffffffffffffffff!2sUniversidade%20Federal%20de%20Sergipe%20-%20Campus%20de%20Lagarto!5e0!3m2!1spt-BR!2sbr!4v1708540000000!5m2!1spt-BR!2sbr" allowfullscreen=""
+                        <iframe class="map-frame" src="https://maps.google.com/maps?q=Universidade+Federal+de+Sergipe+Campus+Lagarto&t=&z=15&ie=UTF8&iwloc=&output=embed" allowfullscreen=""
                             loading="lazy"></iframe>
                     </div>
                 </div>
