modificando fotos do ifs

--- a/index.html
+++ b/index.html
@@ -1164,8 +1164,8 @@
                             <p>Criada em 1995, a unidade surgiu como UNED-Lagarto (Unidade Descentralizada de Ensino), vinculada administrativamente à sede em Aracaju. Nesse período, a instituição tinha como principal objetivo a formação de mão de obra qualificada para os setores produtivos locais, ofertando exclusivamente cursos técnicos de nível médio, como Informática Industrial, Construção Civil e Eletromecânica.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/foto_ifs/placeholder1.jpeg', 'IFS Antigo')">
-                            <img src="images/foto_ifs/Fachada Antiga IFS.jpeg" alt="Fachada Antiga IFS">
+                            onclick="openImage('images/foto_ifs/Fachada Antiga IFS.jpeg', ' acervo ifs')">
+                            <img src="images/foto_ifs/Fachada Antiga IFS.jpeg" alt=" acervo ifs">
                             <div class="img-credit">Clique para ver a foto</div>
                         </div>
                     </div>
@@ -1177,8 +1177,8 @@
                             <p>A grande transformação ocorreu em 2008, com a criação dos Institutos Federais, quando a unidade passou a ser oficialmente o IFS – Campus Lagarto. A partir desse momento, o campus conquistou autonomia institucional e autorização legal para ofertar cursos superiores, ampliando significativamente sua atuação educacional.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/foto_ifs/placeholder2.jpeg', 'Transformação IFS')">
-                            <img src="images/foto_ifs/placeholder2.jpeg" alt="IFS Transição">
+                            onclick="openImage('images/foto_ifs/biblioteca.jpeg', 'Lucas emmanuel/2025')">
+                            <img src="images/foto_ifs/biblioteca.jpeg" alt="IFS Transição">
                             <div class="img-credit">Clique para ver a foto</div>
                         </div>
                     </div>
@@ -1190,7 +1190,7 @@
                             <p>A consolidação do campus permitiu a verticalização do ensino, integrando formação técnica e superior, além do fortalecimento de ações de pesquisa e extensão. O IFS Campus Lagarto passou a desempenhar um papel central no desenvolvimento educacional, social e econômico da região, ampliando o acesso ao ensino superior público e de qualidade.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/foto_ifs/Mateus e luiz.jpeg', 'IFS Atual')">
+                            onclick="openImage('images/foto_ifs/Mateus e luiz.jpeg', 'Lucas/2025')">
                             <img src="images/foto_ifs/Mateus e luiz.jpeg" alt="IFS Atualmente">
                             <div class="img-credit">Clique para ver a foto</div>
                         </div>
