--- a/index.html
+++ b/index.html
@@ -1946,6 +1946,24 @@
                                 <small>Foto: Eduarda Cesár</small>
                             </div>
                         </div>
+                        <div class="tour-item"
+                            onclick="openImage('images/lagarto adventure/hospital universitario.jpeg', 'Hospital Universitário de Lagarto (Foto: Arthur Ribeiro | 2026)')">
+                            <img src="images/lagarto adventure/hospital universitario.jpeg"
+                                alt="Hospital Universitário">
+                            <div class="tour-overlay">
+                                <span>Hospital Universitário de Lagarto</span>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
+                            </div>
+                        </div>
+                        <div class="tour-item"
+                            onclick="openImage('images/lagarto adventure/hospital universitario2.jpeg', 'Hospital Universitário de Lagarto (Foto: Arthur Ribeiro | 2026)')">
+                            <img src="images/lagarto adventure/hospital universitario2.jpeg"
+                                alt="Hospital Universitário 2">
+                            <div class="tour-overlay">
+                                <span>Hospital Universitário de Lagarto</span>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
@@ -2061,66 +2079,75 @@
                     <div class="campus-tour-grid">
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/banner faculdade jardins all.jpeg', 'Faculdade Jardins')">
+                            onclick="openImage('images/lagarto adventure/banner faculdade jardins all.jpeg', 'Faculdade Jardins (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/banner faculdade jardins all.jpeg"
                                 alt="Faculdade Jardins">
                             <div class="tour-overlay">
                                 <span>Faculdade Jardins</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/kuality fachada.jpeg', 'Kuality Brasil - Fachada')">
+                            onclick="openImage('images/lagarto adventure/kuality fachada.jpeg', 'Kuality Brasil - Fachada (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/kuality fachada.jpeg" alt="Kuality Fachada">
                             <div class="tour-overlay">
                                 <span>Kuality Brasil - Fachada</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/kuality interno .jpeg', 'Kuality - Recepção')">
+                            onclick="openImage('images/lagarto adventure/kuality interno .jpeg', 'Kuality - Recepção (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/kuality interno .jpeg" alt="Kuality Interno">
                             <div class="tour-overlay">
                                 <span>Kuality - Recepção</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/kuality interno2.jpeg', 'Kuality - Salas')">
+                            onclick="openImage('images/lagarto adventure/kuality interno2.jpeg', 'Kuality - Salas (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/kuality interno2.jpeg" alt="Kuality Corredor">
                             <div class="tour-overlay">
                                 <span>Kuality - Salas</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/kuality interno3.jpeg', 'Kuality - Ambiente')">
+                            onclick="openImage('images/lagarto adventure/kuality interno3.jpeg', 'Kuality - Ambiente (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/kuality interno3.jpeg" alt="Kuality Interno">
                             <div class="tour-overlay">
                                 <span>Kuality - Ambiente</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/kuality.jpeg', 'Kuality - Recepção Principal')">
+                            onclick="openImage('images/lagarto adventure/kuality.jpeg', 'Kuality - Recepção Principal (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/kuality.jpeg" alt="Kuality Recepção">
                             <div class="tour-overlay">
                                 <span>Kuality - Recepção Principal</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/antigo dom pedro.jpeg', 'Antigo Dom Pedro')">
+                            onclick="openImage('images/lagarto adventure/antigo dom pedro.jpeg', 'Antigo Dom Pedro (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/antigo dom pedro.jpeg" alt="Dom Pedro">
                             <div class="tour-overlay">
                                 <span>Antigo Dom Pedro</span>
-                                <small>Foto: Acervo Projeto</small>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/lagarto adventure/libertar shopping.jpeg', 'Colegio Libertar Shopping (Foto: Arthur Ribeiro | 2026)')">
+                            <img src="images/lagarto adventure/libertar shopping.jpeg" alt="Colegio Libertar Shopping">
+                            <div class="tour-overlay">
+                                <span>Colegio Libertar Shopping</span>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
                             </div>
                         </div>
 
