--- a/index.html
+++ b/index.html
@@ -809,25 +809,13 @@
             display: block;
         }
 
+        /* ATUALIZAÇÃO CSS PARA FOTOS DE TRANSPORTE */
         .route-photos {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 1rem;
+            /* Aumentado minmax para os cards ficarem maiores */
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
             margin-top: 1.5rem;
-        }
-
-        .route-photos img {
-            width: 100%;
-            height: 120px;
-            object-fit: cover;
-            border-radius: 8px;
-            border: 2px solid #eee;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-
-        .route-photos img:hover {
-            transform: scale(1.05);
         }
 
         .galeria-grid {
@@ -1604,12 +1592,24 @@
 
                         <h5 style="margin-top: 1.5rem; color: var(--verde-ifs);">📸 Fotos do Transporte</h5>
                         <div class="route-photos">
-                            <div
-                                style="background: #eee; height: 100px; display: flex; align-items: center; justify-content: center; border-radius: 8px; border: 2px dashed #ccc;">
-                                Foto Ponto</div>
-                            <div
-                                style="background: #eee; height: 100px; display: flex; align-items: center; justify-content: center; border-radius: 8px; border: 2px dashed #ccc;">
-                                Foto Ônibus</div>
+                            <div class="tour-item"
+                                onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus do Treze.jpeg', 'Praça da Igreja Treze (Foto: Rauan Philipe | 2026)')">
+                                <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus do Treze.jpeg"
+                                    alt="Praça da Igreja Treze">
+                                <div class="tour-overlay">
+                                    <span>Praça da Igreja Treze</span>
+                                    <small>Foto: Rauan Philipe | 2026</small>
+                                </div>
+                            </div>
+                            <div class="tour-item"
+                                onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus de Lagarto UFSeIFS.jpeg', 'Onibus que Leva os Alunos (Foto: Arthur Ribeiro | 2026)')">
+                                <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus de Lagarto UFSeIFS.jpeg"
+                                    alt="Onibus">
+                                <div class="tour-overlay">
+                                    <span>Onibus que Leva os Alunos</span>
+                                    <small>Foto: Arthur Ribeiro | 2026</small>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="route-card" style="padding: 0; overflow: hidden;">
@@ -1620,7 +1620,7 @@
 
                 <p
                     style="margin-top: 3rem; text-align: center; font-size: 0.9rem; color: white; text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-                    📸 Fotos: Acervo do Projeto | 2026 | Campus IFS Lagarto
+                    📸 Fotos: Arthur Ribeiro | 2026 | Campus IFS Lagarto
                 </p>
             </div>
         </div>
@@ -1990,13 +1990,16 @@
                             ampliar</p>
 
                         <h5 style="margin-top: 1.5rem; color: var(--azul-ufs);">📸 Fotos do Transporte</h5>
-                        <div class="route-photos">
-                            <div
-                                style="background: #eee; height: 100px; display: flex; align-items: center; justify-content: center; border-radius: 8px; border: 2px dashed #ccc;">
-                                Foto Ponto</div>
-                            <div
-                                style="background: #eee; height: 100px; display: flex; align-items: center; justify-content: center; border-radius: 8px; border: 2px dashed #ccc;">
-                                Foto Ônibus</div>
+                        <div class="route-photos" style="justify-content: center;">
+                            <div class="tour-item" style="max-width: 500px; margin: 0 auto;"
+                                onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus de Lagarto UFSeIFS.jpeg', 'Onibus que Leva os Alunos (Foto: Arthur Ribeiro | 2026)')">
+                                <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Onibus de Lagarto UFSeIFS.jpeg"
+                                    alt="Onibus">
+                                <div class="tour-overlay">
+                                    <span>Onibus que Leva os Alunos</span>
+                                    <small>Foto: Arthur Ribeiro | 2026</small>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="route-card" style="padding: 0; overflow: hidden;">
@@ -2027,46 +2030,46 @@
 
                     <div class="story-block">
                         <div class="story-text">
-                            <h4>Novos Polos Educacionais</h4>
-                            <p>Lagarto continua a crescer como cidade universitária com a chegada e expansão de
-                                faculdades privadas. Instituições como a Faculdade Jardins ampliam o acesso ao ensino
-                                superior, oferecendo novas opções de cursos e infraestrutura moderna para os estudantes
-                                da região centro-sul.</p>
+                            <h4>UNIPLAN</h4>
+                            <p>A UNIPLAN é uma instituição que aposta na praticidade e no acesso ao ensino superior.
+                                Com cursos pensados para a realidade do aluno e metodologias flexíveis, a faculdade
+                                se destaca por facilitar o ingresso na graduação e contribuir para a formação
+                                profissional na região.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/lagarto adventure/banner faculdade jardins all.jpeg', 'Faculdade Jardins')">
-                            <img src="images/lagarto adventure/banner faculdade jardins all.jpeg"
-                                alt="Faculdade Jardins">
-                            <div class="img-credit">Foto: Acervo do Projeto | 2026</div>
+                            onclick="openImage('images/lagarto adventure/uniplan.jpeg', 'UNIPLAN')">
+                            <img src="images/lagarto adventure/uniplan.jpeg"
+                                alt="UNIPLAN">
+                            <div class="img-credit">Foto: Arthur Ribeiro | 2026</div>
                         </div>
                     </div>
 
                     <div class="story-block reverse">
                         <div class="story-text">
-                            <h4>Formação Técnica e Profissionalizante</h4>
-                            <p>Além das graduações, Lagarto conta com escolas de formação técnica de referência, como a
-                                Escola de Enfermagem Kuality Brasil. Estas instituições desempenham papel fundamental na
-                                qualificação rápida de mão de obra, especialmente para o setor de saúde, atendendo à
-                                demanda dos hospitais locais.</p>
+                            <h4>Kuality Brasil</h4>
+                            <p>A Kuality é referência em ensino técnico em Sergipe, especialmente na área da saúde.
+                                Em Lagarto, a instituição se destaca pela estrutura, professores qualificados e foco
+                                na formação prática, preparando os alunos para uma rápida inserção no mercado de trabalho.</p>
                         </div>
                         <div class="story-img-wrapper"
                             onclick="openImage('images/lagarto adventure/kuality fachada.jpeg', 'Fachada Kuality')">
                             <img src="images/lagarto adventure/kuality fachada.jpeg" alt="Kuality Brasil">
-                            <div class="img-credit">Foto: Acervo do Projeto | 2026</div>
+                            <div class="img-credit">Foto: Arthur Ribeiro | 2026</div>
                         </div>
                     </div>
 
                     <div class="story-block">
                         <div class="story-text">
-                            <h4>Espaços de Cultura e Educação</h4>
-                            <p>A cidade também preserva espaços históricos e culturais, como o antigo Dom Pedro, que
-                                fazem parte da memória educacional e social do município, servindo como ponto de
-                                referência para a comunidade.</p>
+                            <h4>Libertar</h4>
+                            <p>A Libertar é reconhecida em Lagarto pelo compromisso com uma educação de qualidade
+                                e formação humana. A instituição valoriza o desenvolvimento acadêmico aliado a
+                                princípios éticos, preparando seus alunos para os desafios do ensino superior
+                                e do mercado de trabalho.</p>
                         </div>
                         <div class="story-img-wrapper"
-                            onclick="openImage('images/lagarto adventure/antigo dom pedro.jpeg', 'Antigo Dom Pedro')">
-                            <img src="images/lagarto adventure/antigo dom pedro.jpeg" alt="Antigo Dom Pedro">
-                            <div class="img-credit">Foto: Acervo do Projeto | 2026</div>
+                            onclick="openImage('images/lagarto adventure/libertar shopping.jpeg', 'Libertar')">
+                            <img src="images/lagarto adventure/libertar shopping.jpeg" alt="Libertar">
+                            <div class="img-credit">Foto: Arthur Ribeiro | 2026</div>
                         </div>
                     </div>
                 </div>
@@ -2134,6 +2137,15 @@
                         </div>
 
                         <div class="tour-item"
+                            onclick="openImage('images/lagarto adventure/libertar shopping.jpeg', 'Colegio Libertar Shopping (Foto: Arthur Ribeiro | 2026)')">
+                            <img src="images/lagarto adventure/libertar shopping.jpeg" alt="Colegio Libertar Shopping">
+                            <div class="tour-overlay">
+                                <span>Colegio Libertar Shopping</span>
+                                <small>Foto: Arthur Ribeiro | 2026</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
                             onclick="openImage('images/lagarto adventure/antigo dom pedro.jpeg', 'Antigo Dom Pedro (Foto: Arthur Ribeiro | 2026)')">
                             <img src="images/lagarto adventure/antigo dom pedro.jpeg" alt="Dom Pedro">
                             <div class="tour-overlay">
@@ -2143,11 +2155,42 @@
                         </div>
 
                         <div class="tour-item"
-                            onclick="openImage('images/lagarto adventure/libertar shopping.jpeg', 'Colegio Libertar Shopping (Foto: Arthur Ribeiro | 2026)')">
-                            <img src="images/lagarto adventure/libertar shopping.jpeg" alt="Colegio Libertar Shopping">
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 2.jpeg', 'Antigo Dom Pedro (Foto: Natalia | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 2.jpeg"
+                                alt="Dom Pedro 2">
                             <div class="tour-overlay">
-                                <span>Colegio Libertar Shopping</span>
-                                <small>Foto: Arthur Ribeiro | 2026</small>
+                                <span>Antigo Dom Pedro</span>
+                                <small>Foto: Natalia | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 3.jpeg', 'Antigo Dom Pedro (Foto: Natalia | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 3.jpeg"
+                                alt="Dom Pedro 3">
+                            <div class="tour-overlay">
+                                <span>Antigo Dom Pedro</span>
+                                <small>Foto: Natalia | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 4.jpeg', 'Antigo Dom Pedro (Foto: Natalia | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 4.jpeg"
+                                alt="Dom Pedro 4">
+                            <div class="tour-overlay">
+                                <span>Antigo Dom Pedro</span>
+                                <small>Foto: Natalia | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 5.jpeg', 'Antigo Dom Pedro (Foto: Natalia | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Dom Pedro 5.jpeg"
+                                alt="Dom Pedro 5">
+                            <div class="tour-overlay">
+                                <span>Antigo Dom Pedro</span>
+                                <small>Foto: Natalia | 2025</small>
                             </div>
                         </div>
 
