--- a/index.html
+++ b/index.html
@@ -812,7 +812,6 @@
         /* ATUALIZAÇÃO CSS PARA FOTOS DE TRANSPORTE */
         .route-photos {
             display: grid;
-            /* Aumentado minmax para os cards ficarem maiores */
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
             gap: 1.5rem;
             margin-top: 1.5rem;
@@ -1498,6 +1497,56 @@
                         </div>
 
                         <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento Gamecover 1.jpeg', 'Evento de Hallowen (Foto: Jonatas Silva | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento Gamecover 1.jpeg"
+                                alt="Evento Game Cover 1">
+                            <div class="tour-overlay">
+                                <span>Evento Game Cover 1</span>
+                                <small>Foto: Jonatas Silva | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver2.jpeg', 'Evento de Hallowen (Foto: Jonatas Silva | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver2.jpeg"
+                                alt="Evento Game Cover 2">
+                            <div class="tour-overlay">
+                                <span>Evento Game Cover 2</span>
+                                <small>Foto: Jonatas Silva | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver3.jpeg', 'Evento de Hallowen (Foto: Jonatas Silva | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver3.jpeg"
+                                alt="Evento Game Cover 3">
+                            <div class="tour-overlay">
+                                <span>Evento Game Cover 3</span>
+                                <small>Foto: Jonatas Silva | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver4.jpeg', 'Evento de Hallowen (Foto: Jonatas Silva | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver4.jpeg"
+                                alt="Evento Game Cover 4">
+                            <div class="tour-overlay">
+                                <span>Evento Game Cover 4</span>
+                                <small>Foto: Jonatas Silva | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver5.jpeg', 'Evento de Hallowen (Foto: Jonatas Silva | 2025)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento GAmeCOver5.jpeg"
+                                alt="Evento Game Cover 5">
+                            <div class="tour-overlay">
+                                <span>Evento Game Cover 5</span>
+                                <small>Foto: Jonatas Silva | 2025</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
                             onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento Make-A-Thon.jpeg', 'Evento Make-A-Thon (Foto: Victor Silva do Valle | 2024)')">
                             <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Evento Make-A-Thon.jpeg"
                                 alt="Make-A-Thon">
@@ -1510,9 +1559,39 @@
                         <div class="tour-item"
                             onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon.jpeg', 'Evento Make-A-Thon (Foto: Victor Silva do Valle | 2024)')">
                             <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon.jpeg"
+                                alt="Make-A-Thon 1">
+                            <div class="tour-overlay">
+                                <span>Evento Make-a-thon 1</span>
+                                <small>Foto: Victor Silva do Valle | 2024</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 2.jpeg', 'Evento Make-A-Thon (Foto: Victor Silva do Valle | 2024)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 2.jpeg"
                                 alt="Make-A-Thon 2">
                             <div class="tour-overlay">
                                 <span>Evento Make-a-thon 2</span>
+                                <small>Foto: Victor Silva do Valle | 2024</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 3.jpeg', 'Evento Make-A-Thon (Foto: Victor Silva do Valle | 2024)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 3.jpeg"
+                                alt="Make-A-Thon 3">
+                            <div class="tour-overlay">
+                                <span>Evento Make-a-thon 3</span>
+                                <small>Foto: Victor Silva do Valle | 2024</small>
+                            </div>
+                        </div>
+
+                        <div class="tour-item"
+                            onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 4.jpeg', 'Evento Make-A-Thon (Foto: Victor Silva do Valle | 2024)')">
+                            <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/EventoIFS Make-A-Thon 4.jpeg"
+                                alt="Make-A-Thon 4">
+                            <div class="tour-overlay">
+                                <span>Evento Make-a-thon 4</span>
                                 <small>Foto: Victor Silva do Valle | 2024</small>
                             </div>
                         </div>
