--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
             position: sticky;
             top: 0;
+            z-index: 1000;
         }
 
         body.home-active footer,
@@ -933,7 +934,7 @@
         .story-text p {
             font-size: 1.1rem;
             line-height: 1.8;
-            color: #444;
+            color: #ffffff;
             text-align: justify;
         }
 
@@ -1180,7 +1181,78 @@
                     </div>
                 </div>
 
-            </div>
+                <div class="campus-tour-section" style="margin-top: 0; padding-top: 0; border-top: none;">
+                    <h2 style="text-align: center; color: white; text-shadow: 2px 2px 4px black; border: none; margin-bottom: 3rem;">
+                        ✨ Conheça os Encantos de Lagarto</h2>
+
+                    <div class="story-block">
+                        <div class="story-text">
+                            <h4>Santuário N. Sra. da Piedade</h4>
+                            <p>O coração pulsante da fé e da história de Lagarto. O Santuário de Nossa Senhora da Piedade não é apenas um marco arquitetônico no centro da cidade, mas um símbolo de devoção que atravessa gerações. Sua imponência acolhe moradores e visitantes, sendo o ponto de partida ideal para quem deseja compreender a alma e as tradições do povo lagartense.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Igreja Lagarto frente.jpeg', 'Igreja Frente (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Igreja Lagarto frente.jpeg" alt="Santuário N. Sra. da Piedade">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block reverse">
+                        <div class="story-text">
+                            <h4>Praça da Fonte</h4>
+                            <p>Um verdadeiro refúgio urbano de beleza e convivência. A Praça da Fonte é o ponto de encontro perfeito para o lazer, onde o som das águas se mistura às conversas cotidianas. Com seu paisagismo revitalizado, o espaço convida a momentos de descanso e apreciação, tornando-se um cartão-postal vibrante que reflete a qualidade de vida na cidade.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Fonte lagarto.jpeg', 'Praça Fonte (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Fonte lagarto.jpeg" alt="Praça da Fonte">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block">
+                        <div class="story-text">
+                            <h4>Cristo Redentor</h4>
+                            <p>Um olhar de proteção sobre a cidade. Erguendo-se majestosamente, a estátua do Cristo Redentor observa e abençoa Lagarto do alto. Mais do que um monumento, é um marco visual de fé que pode ser visto de diversos pontos, reforçando a identidade religiosa e acolhedora que caracteriza o município e seu povo.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Estatua de Cristo Lagarto.jpeg', 'Estatua de Cristo (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Estatua de Cristo Lagarto.jpeg" alt="Cristo Redentor">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block reverse">
+                        <div class="story-text">
+                            <h4>Parque Zezé Rocha</h4>
+                            <p>A capital da vaquejada e da tradição nordestina. O Parque Zezé Rocha é um gigante cultural, palco de grandes eventos e das mais tradicionais festas de gado do Brasil. É aqui que a economia e o turismo se encontram com a paixão pelo campo, reunindo multidões e celebrando as raízes profundas do sertão sergipano.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Parque ZEZE ROCHA.jpeg', 'Parque ZEZE ROCHA (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Parque ZEZE ROCHA.jpeg" alt="Parque Zezé Rocha">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block">
+                        <div class="story-text">
+                            <h4>Terminal Rodoviário</h4>
+                            <p>O ponto de conexão com o futuro. O Terminal Rodoviário liga Lagarto a todo o estado de Sergipe e além fronteiras. É o portão de entrada e saída estratégico para milhares de estudantes universitários, trabalhadores e visitantes que movimentam a cidade diariamente, simbolizando o fluxo constante de progresso e conhecimento.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Rodoviaria lagarto.jpeg', 'Terminal Rodoviário (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Rodoviaria lagarto.jpeg" alt="Terminal Rodoviário">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block reverse">
+                        <div class="story-text">
+                            <h4>Ecoturismo e Trilhas</h4>
+                            <p>A natureza exuberante ao nosso redor. Para além da vida urbana e acadêmica, Lagarto surpreende com suas belezas naturais preservadas. As trilhas ecológicas oferecem um refúgio verde para quem busca aventura e paz, com paisagens deslumbrantes que revelam o potencial do ecoturismo na região.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Trilha lagarto.jpeg', 'Trilha (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Trilha lagarto.jpeg" alt="Ecoturismo e Trilhas">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                </div>
+                </div>
         </div>
 
         <div id="ifs" class="page">
