--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
 
                     <div class="story-block reverse">
                         <div class="story-text">
-                            <h4>Praça da Fonte</h4>
+                            <h4>Praça Geremias Monteiro</h4>
                             <p>Um verdadeiro refúgio urbano de beleza e convivência. A Praça da Fonte é o ponto de encontro perfeito para o lazer, onde o som das águas se mistura às conversas cotidianas. Com seu paisagismo revitalizado, o espaço convida a momentos de descanso e apreciação, tornando-se um cartão-postal vibrante que reflete a qualidade de vida na cidade.</p>
                         </div>
                         <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Fonte lagarto.jpeg', 'Praça Fonte (Foto: Rosana Siqueira | 2025)')">
@@ -1209,11 +1209,11 @@
 
                     <div class="story-block">
                         <div class="story-text">
-                            <h4>Cristo Redentor</h4>
-                            <p>Um olhar de proteção sobre a cidade. Erguendo-se majestosamente, a estátua do Cristo Redentor observa e abençoa Lagarto do alto. Mais do que um monumento, é um marco visual de fé que pode ser visto de diversos pontos, reforçando a identidade religiosa e acolhedora que caracteriza o município e seu povo.</p>
+                            <h4>Monumento a N. Sra. da Piedade</h4>
+                            <p>A imponente imagem da padroeira da cidade, abençoando a entrada de Lagarto e reforçando a forte identidade religiosa do município. Mais do que um monumento, é um marco visual de fé que pode ser visto de diversos pontos, reforçando a identidade religiosa e acolhedora que caracteriza o município e seu povo.</p>
                         </div>
                         <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Estatua de Cristo Lagarto.jpeg', 'Estatua de Cristo (Foto: Rosana Siqueira | 2025)')">
-                            <img src="images/Fotos que Rosana quer/Estatua de Cristo Lagarto.jpeg" alt="Cristo Redentor">
+                            <img src="images/Fotos que Rosana quer/Estatua de Cristo Lagarto.jpeg" alt="Monumento a N. Sra. da Piedade">
                             <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
                         </div>
                     </div>
@@ -1242,14 +1242,37 @@
 
                     <div class="story-block reverse">
                         <div class="story-text">
-                            <h4>Ecoturismo e Trilhas</h4>
-                            <p>A natureza exuberante ao nosso redor. Para além da vida urbana e acadêmica, Lagarto surpreende com suas belezas naturais preservadas. As trilhas ecológicas oferecem um refúgio verde para quem busca aventura e paz, com paisagens deslumbrantes que revelam o potencial do ecoturismo na região.</p>
+                            <h4>Casamento Caipira do Povoado Brejo</h4>
+                            <p>Reconhecido como 'Bem de Interesse Cultural' pelo Governo de Sergipe e Patrimônio Cultural Imaterial do município, o Casamento Caipira do povoado Brejo é uma das manifestações mais simbólicas das festividades juninas de Lagarto. Com décadas de tradição, a festa une humor, religiosidade e trajes típicos, traduzindo a identidade e a memória afetiva do povo lagartense.</p>
                         </div>
-                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Trilha lagarto.jpeg', 'Trilha (Foto: Rosana Siqueira | 2025)')">
-                            <img src="images/Fotos que Rosana quer/Trilha lagarto.jpeg" alt="Ecoturismo e Trilhas">
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Carreata de cavalo lagarto.jpeg', 'Casamento Caipira (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Carreata de cavalo lagarto.jpeg" alt="Casamento Caipira">
                             <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
                         </div>
                     </div>
+
+                     <div class="story-block">
+                        <div class="story-text">
+                            <h4>Comércio Local e Cultural</h4>
+                            <p>A força de Lagarto também reside em seu comércio vibrante e em suas feiras livres. É onde a cultura se encontra com a economia, destacando a produção local e o espírito empreendedor que movimenta a região centro-sul do estado.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Freirantes lagarto 2.jpeg', 'Comércio Local e Cultural (Foto: Rosana Siqueira | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Freirantes lagarto 2.jpeg" alt="Comércio Local e Cultural">
+                            <div class="img-credit">Foto: Rosana Siqueira | 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="story-block reverse">
+                        <div class="story-text">
+                            <h4>Prefeitura Municipal</h4>
+                            <p>O centro administrativo de Lagarto, onde são tomadas as decisões que impulsionam o desenvolvimento da cidade universitária e o bem-estar de seus cidadãos.</p>
+                        </div>
+                        <div class="story-img-wrapper" onclick="openImage('images/Fotos que Rosana quer/Casa do GOverna Aleatoria LAgarto.jpeg', 'Prefeitura Municipal (Foto: Rosana Siqueria | 2025)')">
+                            <img src="images/Fotos que Rosana quer/Casa do GOverna Aleatoria LAgarto.jpeg" alt="Prefeitura Municipal">
+                            <div class="img-credit">Foto: Rosana Siqueria | 2025</div>
+                        </div>
+                    </div>
+
 
                 </div>
                 </div>
@@ -2371,9 +2394,84 @@
                         estudantes e a comunidade a conhecerem melhor a infraestrutura educacional que Lagarto oferece.
                     </p>
 
+                    <div class="campus-tour-section" style="margin-top: 0; padding-top: 0; border-top: none;">
+                        <h2 style="text-align: center; color: #333; text-shadow: none; border: none; margin-bottom: 2rem;">
+                            ✨ Vida Universitária e Cotidiano</h2>
+
+                        <div class="campus-tour-grid">
+                            <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Arco Iris IFS.jpeg', 'Arco-íris (Foto: Rosana Siqueira | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Arco Iris IFS.jpeg" alt="Arco-íris">
+                                <div class="tour-overlay">
+                                    <span>Arco-íris</span>
+                                    <small>Foto: Rosana Siqueira | 2025</small>
+                                </div>
+                            </div>
+                            <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/estrada aleatoria de lagarto.jpeg', 'Ciclovia do Bairro Cidade Nova (Foto: Rosana Siqueria | 2025)')">
+                                <img src="images/Fotos que Rosana quer/estrada aleatoria de lagarto.jpeg" alt="Ciclovia do Bairro Cidade Nova">
+                                <div class="tour-overlay">
+                                    <span>Ciclovia do Bairro Cidade Nova</span>
+                                    <small>Foto: Rosana Siqueria | 2025</small>
+                                </div>
+                            </div>
+                            <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Galho de ROsana.jpeg', 'Praça do IFS Arvore (Foto: Rosana Siqueria | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Galho de ROsana.jpeg" alt="Praça do IFS Arvore">
+                                <div class="tour-overlay">
+                                    <span>Praça do IFS Arvore</span>
+                                    <small>Foto: Rosana Siqueria | 2025</small>
+                                </div>
+                            </div>
+                            <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Mural feito por alunos IFS.jpeg', 'Desenho na Parede IFS (Foto: Rosana Siqueria | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Mural feito por alunos IFS.jpeg" alt="Desenho na Parede IFS">
+                                <div class="tour-overlay">
+                                    <span>Desenho na Parede IFS</span>
+                                    <small>Foto: Rosana Siqueria | 2025</small>
+                                </div>
+                            </div>
+                            <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Plantando mudas no IFS.jpeg', 'Plantando Mudas IFS (Foto: Rosana Siqueira | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Plantando mudas no IFS.jpeg" alt="Plantando Mudas IFS">
+                                <div class="tour-overlay">
+                                    <span>Plantando Mudas IFS</span>
+                                    <small>Foto: Rosana Siqueira | 2025</small>
+                                </div>
+                            </div>
+                            <div class="tour-item" onclick="openImage('images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Outra foto da Fonte.jpeg', 'Praça Geremias Monteiro Fonte (Foto: Rosana Siqueira | 2025)')">
+                                <img src="images/foto_ifs/Fotos Victor (Vou usar essas por enquanto)/Outra foto da Fonte.jpeg" alt="Praça Geremias Monteiro Fonte">
+                                <div class="tour-overlay">
+                                    <span>Praça Geremias Monteiro Fonte</span>
+                                    <small>Foto: Rosana Siqueira | 2025</small>
+                                </div>
+                            </div>
+                             <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Bairro cidade nova.jpeg', 'Bairro cidade  nova (Foto: Luis Eduardo | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Bairro cidade nova.jpeg" alt="Bairro cidade nova">
+                                <div class="tour-overlay">
+                                    <span>Bairro Cidade  Nova</span>
+                                    <small>Foto: Luis Eduardo | 2025</small>
+                                </div>
+                            </div>
+                             <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/Bairro cidade  nova 2.jpeg', 'Bairro cidade  nova (Foto: Luis Eduardo | 2025)')">
+                                <img src="images/Fotos que Rosana quer/Bairro cidade  nova 2.jpeg" alt="Bairro cidade nova 2">
+                                <div class="tour-overlay">
+                                    <span>Bairro Cidade  Nova</span>
+                                    <small>Foto: Luis Eduardo | 2025</small>
+                                </div>
+                            </div>
+                             <div class="tour-item" onclick="openImage('images/Fotos que Rosana quer/barragem as da montanhas.jpeg', 'barragem as da montanhas (Foto: Luis Eduardo | 2025)')">
+                                <img src="images/Fotos que Rosana quer/barragem as da montanhas.jpeg" alt="Barragem">
+                                <div class="tour-overlay">
+                                    <span>Parque das Palmeiras</span>
+                                    <small>Foto: Luis Eduardo | 2025</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <h3 style="margin-bottom: 1.5rem; border-bottom: 2px solid var(--dourado); display: inline-block;">
                         Equipe de Desenvolvimento</h3>
                     <div class="team-grid">
+                         <div class="team-member">
+                            <div class="avatar">RS</div>
+                            <h4>Rosana Siqueira</h4>
+                            <p>Professora Orientadora</p>
+                        </div>
                         <div class="team-member">
                             <div class="avatar">JA</div>
                             <h4>José Alexandre</h4>
